--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,12 @@
 
 buildscript {
     repositories {
-        jcenter()
+        //jcenter()
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -14,7 +16,11 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
+        //jcenter()
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url "https://jitpack.io" }
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        // maven { url "https://maven.google.com" }
     }
 }
 
