--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,10 +57,9 @@
 
         <activity
             android:name=".MainActivity"
-
             android:configChanges="orientation|screenSize|uiMode"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/DayTheme"/>
     </application>
 
 </manifest>
