--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ allprojects {
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         maven { url "https://jitpack.io" }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-        // maven { url "https://maven.google.com" }
+        maven { url "https://maven.google.com" }
     }
 }
 
@@ -33,5 +33,5 @@ ext {
     MIN_SDK_VERSION = 15
     TARGET_SDK_VERSION = 25
     BUILDTOOLS_VERSION = "25.0.3"
-    SUPPORT_VERSION = "25.3.1"
+    SUPPORT_VERSION = "25.4.0"
 }
