--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,8 @@ buildscript {
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'com.android.tools.build:gradle:3.0.0'
+        //classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -29,9 +29,9 @@ task clean(type: Delete) {
 }
 
 ext {
-    COMPILE_SDK_VERSION = 25
-    MIN_SDK_VERSION = 15
-    TARGET_SDK_VERSION = 25
-    BUILDTOOLS_VERSION = "25.0.3"
-    SUPPORT_VERSION = "25.4.0"
+    compileSdkVersion = 26
+    minSdkVersion = 15
+    targetSdkVersion = 26
+    buildToolsVersion = "26.0.2"
+    supportVersion = "26.1.0"
 }
