--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,6 @@ dependencies {
     compile "com.android.support:design:${supportVersion}"
 
     // butterknife
-    //apt 'com.jakewharton:butterknife-compiler:8.2.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.2.1'
     compile 'com.jakewharton:butterknife:8.2.1'
     // retrofit 2
@@ -63,9 +62,17 @@ dependencies {
     compile 'com.trello.rxlifecycle2:rxlifecycle-components:2.0.1'
     // RxBinding
     compile 'com.jakewharton.rxbinding2:rxbinding-appcompat-v7:2.0.0'
+    // RxCache
+    compile "com.github.VictorAlbertos.RxCache:runtime:1.8.0-2.x"
+    compile 'com.github.VictorAlbertos.Jolyglot:gson:0.0.3'
+    // dagger2
+    implementation 'com.google.dagger:dagger:2.12'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.12'
+    // EventBus
+    //implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation 'org.simple:androideventbus:1.0.5.1'
     // 滑动返回 https://oss.sonatype.org/content/repositories/snapshots/com/r0adkll/slidableactivity/
     compile 'com.r0adkll:slidableactivity:2.0.7-SNAPSHOT'
-
 
     // circleimageview
     compile 'de.hdodenhof:circleimageview:2.1.0'
