--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,23 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cxz.headline">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher_circle"
+        android:icon="@mipmap/ic_launcher_rect"
         android:label="@string/app_name"
-        android:name=".App"
+        android:name=".app.App"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".SplashActivity"
+            android:name=".module.splash.SplashActivity"
             android:configChanges="orientation|screenSize|uiMode"
             android:label="@string/app_name"
             android:theme="@style/SplashTheme">
@@ -24,7 +32,7 @@
             android:enabled="true"
             android:icon="@mipmap/ic_launcher_circle"
             android:label="@string/app_name"
-            android:targetActivity=".SplashActivity">
+            android:targetActivity=".module.splash.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -36,7 +44,7 @@
             android:enabled="false"
             android:icon="@mipmap/ic_launcher_rect"
             android:label="@string/app_name"
-            android:targetActivity=".SplashActivity">
+            android:targetActivity=".module.splash.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -48,7 +56,7 @@
             android:enabled="false"
             android:icon="@mipmap/ic_launcher_square"
             android:label="@string/app_name"
-            android:targetActivity=".SplashActivity">
+            android:targetActivity=".module.splash.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -56,7 +64,7 @@
         </activity-alias>
 
         <activity
-            android:name=".MainActivity"
+            android:name=".module.main.MainActivity"
             android:configChanges="orientation|screenSize|uiMode"
             android:label="@string/app_name"
             android:theme="@style/DayTheme"/>
