--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,33 +38,33 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
-    compile "com.android.support:appcompat-v7:${supportVersion}"
-    compile "com.android.support:cardview-v7:${supportVersion}"
-    compile "com.android.support:design:${supportVersion}"
+    implementation "com.android.support:appcompat-v7:${supportVersion}"
+    implementation "com.android.support:cardview-v7:${supportVersion}"
+    implementation "com.android.support:design:${supportVersion}"
 
     // butterknife
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.2.1'
-    compile 'com.jakewharton:butterknife:8.2.1'
+    implementation 'com.jakewharton:butterknife:8.2.1'
     // retrofit 2
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     // RxJava 2
-    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     // RxLifecycle
-    compile 'com.trello.rxlifecycle2:rxlifecycle:2.0.1'
-    compile 'com.trello.rxlifecycle2:rxlifecycle-components:2.0.1'
+    implementation 'com.trello.rxlifecycle2:rxlifecycle:2.0.1'
+    implementation 'com.trello.rxlifecycle2:rxlifecycle-components:2.0.1'
     // RxBinding
-    compile 'com.jakewharton.rxbinding2:rxbinding-appcompat-v7:2.0.0'
+    implementation 'com.jakewharton.rxbinding2:rxbinding-appcompat-v7:2.0.0'
     // RxCache
-    compile "com.github.VictorAlbertos.RxCache:runtime:1.8.0-2.x"
-    compile 'com.github.VictorAlbertos.Jolyglot:gson:0.0.3'
+    implementation "com.github.VictorAlbertos.RxCache:runtime:1.8.0-2.x"
+    implementation 'com.github.VictorAlbertos.Jolyglot:gson:0.0.3'
     // dagger2
     implementation 'com.google.dagger:dagger:2.12'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.12'
@@ -72,9 +72,11 @@ dependencies {
     //implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'org.simple:androideventbus:1.0.5.1'
     // 滑动返回 https://oss.sonatype.org/content/repositories/snapshots/com/r0adkll/slidableactivity/
-    compile 'com.r0adkll:slidableactivity:2.0.7-SNAPSHOT'
+    implementation 'com.r0adkll:slidableactivity:2.0.7-SNAPSHOT'
 
     // circleimageview
-    compile 'de.hdodenhof:circleimageview:2.1.0'
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
+    // greendao
+    implementation 'org.greenrobot:greendao:3.2.2'
 
 }
