--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.0.0'
         //classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
 
+        classpath "io.realm:realm-gradle-plugin:3.0.0"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
