--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,12 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
+        android:name=".app.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_rect"
         android:label="@string/app_name"
-        android:name=".app.App"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/DayTheme">
         <activity
             android:name=".module.splash.SplashActivity"
             android:configChanges="orientation|screenSize|uiMode"
@@ -29,7 +29,7 @@
 
         <activity-alias
             android:name=".SplashActivity_circle"
-            android:enabled="true"
+            android:enabled="false"
             android:icon="@mipmap/ic_launcher_circle"
             android:label="@string/app_name"
             android:targetActivity=".module.splash.SplashActivity">
@@ -53,7 +53,7 @@
 
         <activity-alias
             android:name=".SplashActivity_square"
-            android:enabled="false"
+            android:enabled="true"
             android:icon="@mipmap/ic_launcher_square"
             android:label="@string/app_name"
             android:targetActivity=".module.splash.SplashActivity">
@@ -66,8 +66,7 @@
         <activity
             android:name=".module.main.MainActivity"
             android:configChanges="orientation|screenSize|uiMode"
-            android:label="@string/app_name"
-            android:theme="@style/DayTheme"/>
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
