--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,5 +86,6 @@ dependencies {
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.4.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
+    implementation 'com.lzy.widget:ninegridview:0.2.0'
 
 }
