--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -47,7 +47,6 @@ dependencies {
     implementation "com.android.support:appcompat-v7:${supportVersion}"
     implementation "com.android.support:cardview-v7:${supportVersion}"
     implementation "com.android.support:design:${supportVersion}"
-
     // butterknife
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.2.1'
     implementation 'com.jakewharton:butterknife:8.2.1'
@@ -64,7 +63,7 @@ dependencies {
     // RxBinding
     implementation 'com.jakewharton.rxbinding2:rxbinding-appcompat-v7:2.0.0'
     // RxCache
-    implementation "com.github.VictorAlbertos.RxCache:runtime:1.8.0-2.x"
+    implementation 'com.github.VictorAlbertos.RxCache:runtime:1.8.0-2.x'
     implementation 'com.github.VictorAlbertos.Jolyglot:gson:0.0.3'
     // dagger2
     implementation 'com.google.dagger:dagger:2.12'
@@ -74,18 +73,18 @@ dependencies {
     implementation 'org.simple:androideventbus:1.0.5.1'
     // 滑动返回 https://oss.sonatype.org/content/repositories/snapshots/com/r0adkll/slidableactivity/
     implementation 'com.r0adkll:slidableactivity:2.0.7-SNAPSHOT'
-
     // circleimageview
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     // leakcanary
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.4'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
-
-    implementation 'com.cxz.recyclerview:pullloadrecyclerview:1.0.0'
-    implementation 'com.zhy:base-rvadapter:3.0.3'
+    //implementation 'com.cxz.recyclerview:pullloadrecyclerview:1.0.0'
+    //implementation 'com.zhy:base-rvadapter:3.0.3'
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.4.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
     implementation 'com.lzy.widget:ninegridview:0.2.0'
 
+
+    implementation project(':xrecyclerview')
 }
