--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,17 +28,17 @@
         </activity>
 
         <activity-alias
-            android:name=".SplashActivity_circle"
-            android:enabled="false"
-            android:icon="@mipmap/ic_launcher_circle"
+            android:name=".SplashActivity_square"
+            android:enabled="true"
+            android:icon="@mipmap/ic_launcher_square"
             android:label="@string/app_name"
             android:targetActivity=".module.splash.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity-alias>
-
         <activity-alias
             android:name=".SplashActivity_rect"
             android:enabled="false"
@@ -47,18 +47,19 @@
             android:targetActivity=".module.splash.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity-alias>
-
         <activity-alias
-            android:name=".SplashActivity_square"
-            android:enabled="true"
-            android:icon="@mipmap/ic_launcher_square"
+            android:name=".SplashActivity_circle"
+            android:enabled="false"
+            android:icon="@mipmap/ic_launcher_circle"
             android:label="@string/app_name"
             android:targetActivity=".module.splash.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity-alias>
@@ -67,6 +68,7 @@
             android:name=".module.main.MainActivity"
             android:configChanges="orientation|screenSize|uiMode"
             android:label="@string/app_name" />
+        <activity android:name=".module.news.channel.NewsChannelActivity"></activity>
     </application>
 
 </manifest>
