--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,9 +28,9 @@
         </activity>
 
         <activity-alias
-            android:name=".SplashActivity_square"
-            android:enabled="true"
-            android:icon="@mipmap/ic_launcher_square"
+            android:name=".SplashActivity_circle"
+            android:enabled="false"
+            android:icon="@mipmap/ic_launcher_circle"
             android:label="@string/app_name"
             android:targetActivity=".module.splash.SplashActivity">
             <intent-filter>
@@ -52,9 +52,9 @@
             </intent-filter>
         </activity-alias>
         <activity-alias
-            android:name=".SplashActivity_circle"
-            android:enabled="false"
-            android:icon="@mipmap/ic_launcher_circle"
+            android:name=".SplashActivity_square"
+            android:enabled="true"
+            android:icon="@mipmap/ic_launcher_square"
             android:label="@string/app_name"
             android:targetActivity=".module.splash.SplashActivity">
             <intent-filter>
@@ -68,7 +68,8 @@
             android:name=".module.main.MainActivity"
             android:configChanges="orientation|screenSize|uiMode"
             android:label="@string/app_name" />
-        <activity android:name=".module.news.channel.NewsChannelActivity"></activity>
+        <activity android:name=".module.news.channel.NewsChannelActivity" />
+        <activity android:name=".module.news.detail.NewsDetailActivity"/>
     </application>
 
 </manifest>
