--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <application
         android:name=".app.App"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher_rect"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/DayTheme">
@@ -24,52 +24,21 @@
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity-alias
-            android:name=".SplashActivity_circle"
-            android:enabled="false"
-            android:icon="@mipmap/ic_launcher_circle"
-            android:label="@string/app_name"
-            android:targetActivity=".module.splash.SplashActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity-alias>
-        <activity-alias
-            android:name=".SplashActivity_rect"
-            android:enabled="false"
-            android:icon="@mipmap/ic_launcher_rect"
-            android:label="@string/app_name"
-            android:targetActivity=".module.splash.SplashActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity-alias>
-        <activity-alias
-            android:name=".SplashActivity_square"
-            android:enabled="true"
-            android:icon="@mipmap/ic_launcher_square"
-            android:label="@string/app_name"
-            android:targetActivity=".module.splash.SplashActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity-alias>
 
         <activity
             android:name=".module.main.MainActivity"
             android:configChanges="orientation|screenSize|uiMode"
             android:label="@string/app_name" />
         <activity android:name=".module.news.channel.NewsChannelActivity" />
-        <activity android:name=".module.news.detail.NewsDetailActivity"/>
+        <activity android:name=".module.news.detail.NewsDetailActivity" />
+        <activity
+            android:name=".module.video.detail.VideoDetailActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".module.news.comment.NewsCommentActivity"></activity>
     </application>
 
 </manifest>
