--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,10 @@ buildscript {
     repositories {
         //jcenter()
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath 'com.android.tools.build:gradle:3.1.3'
         //classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
 
         classpath "io.realm:realm-gradle-plugin:3.0.0"
@@ -23,6 +24,7 @@ allprojects {
         maven { url "https://jitpack.io" }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://maven.google.com" }
+        google()
     }
 }
 
@@ -34,6 +36,6 @@ ext {
     compileSdkVersion = 27
     minSdkVersion = 16
     targetSdkVersion = 27
-    buildToolsVersion = "27.0.2"
-    supportVersion = "27.0.2"
+    buildToolsVersion = "27.0.3"
+    supportVersion = "27.1.1"
 }
