--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     repositories {
-        //jcenter()
+        jcenter()
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         google()
     }
@@ -19,11 +19,10 @@ buildscript {
 
 allprojects {
     repositories {
-        //jcenter()
+        jcenter()
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         maven { url "https://jitpack.io" }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-        maven { url "https://maven.google.com" }
         google()
     }
 }
